@@ -7,6 +7,7 @@ $Id$
 
 0.06
 	- Added Win32 support [Tom Heady]
+	- Added -Wall to CCFLAGS
 
 0.05   Sat Feb 22 08:40:08 2003
 	- Test scripts and documentation updates [Tom Heady]
